--- a/src/index.scss
+++ b/src/index.scss
@@ -58,10 +58,6 @@ button {
 		transform: translateY(-1px);
 	}
 
-	div {
-		display: inline-block;
-	}
-
 	.done-status {
 		background-color: #c0392b;
 		height: 100%;
@@ -108,6 +104,8 @@ button {
 		display: block;
 		border: 0;
 		border-bottom: solid black 1px;
+		display: block;
+
 		padding: 5px;
 		height: 25px;
 		width: 100%;
@@ -119,5 +117,26 @@ button {
 
 	button {
 		margin-top: 10px;
+	}
+}
+
+.timestamp-container {
+	display: flex;
+
+	.timestamp-block {
+		&:not(:first-child) {
+			display: block;
+			padding: 0 0 0 15px;
+		}
+
+		.timestamp-label {
+			padding-right: 5px;
+		}
+
+		& > p {
+			display: inline-block;
+			color: gray;
+			font-size: 12px;
+		}
 	}
 }
